--- a/css/agency.css
+++ b/css/agency.css
@@ -9,11 +9,15 @@ body {
 
 p {
   line-height: 1.75; }
-
 a {
   color: #324B6A; }
   a.active, a:active, a:focus, a:hover {
     color: #fec503; }
+p.info-text {
+  color: #434743;
+  margin-left: 15px;
+  margin-right: 25px;
+}
 
 h1,
 h2,
